# shreddit

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  example.env  flake.nix  shreddit.env  shreddit.env.example
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: build.yml  check.yml  checks.yml  draft-release.yml  lint.yml  lint_pr.yml  publish.yml  release-drafter.yml  release-plz.yml  release.yml
src/: access_token.rs  cli.rs  comments.rs  main.rs  things.rs
src/sources/: api.rs  gdpr.rs  mod.rs
src/things/: comment.rs  friend.rs  mod.rs  post.rs  saved_comment.rs  saved_post.rs  upvoted.rs
