[package]
name = "shreddit"
version = "1.1.7"
edition = "2024"
authors = ["Andrew Banchich <crates-io@andrew.banchi.ch>"]
description = "Overwrite and delete your Reddit account history."
license = "MIT"
repository = "https://github.com/andrewbanchich/shreddit"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
clap = { version = "4.5.54", features = ["derive", "env"] }
csv = "1.4.0"
dotenvy = "0.15.7"
futures-core = "0.3.31"
futures-util = "0.3.28"
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
parse_datetime = "0.13.3"
jiff = { version = "0.2.18", features = ["serde"] }
